<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ikram_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_120_calories">120 Calories</string>
  <string name="lbl_filter">Filter</string>
  <string name="lbl_logout">Logout</string>
  <string name="lbl_email_address">Email Address</string>
  <string name="msg_confirm_passwor">Confirm Password</string>
  <string name="lbl_upload">Upload</string>
  <string name="lbl_recommended">Recommended</string>
  <string name="lbl_home">Home</string>
  <string name="msg_toast_with_berr">Toast with Berries</string>
  <string name="lbl_main_dish">Main Dish</string>
  <string name="lbl_10_mins">10 mins</string>
  <string name="lbl_directions">Directions</string>
  <string name="lbl_lunch">Lunch</string>
  <string name="msg_asian_glazed_ch">Asian Glazed Chicken Thighs</string>
  <string name="lbl_chocolate_cake">Chocolate Cake</string>
  <string name="lbl_side">Side</string>
  <string name="lbl_tutorial">Tutorial</string>
  <string name="msg_already_registe">Already Registered?</string>
  <string name="lbl_course">Course</string>
  <string name="lbl_set_manually">Set Manually</string>
  <string name="lbl_see_all">See All</string>
  <string name="lbl_dinner">Dinner</string>
  <string name="lbl_favourite">Favourite</string>
  <string name="msg_preparation_tim">Preparation Time</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</string>
  <string name="msg_forgot_password">Forgot Password?</string>
  <string name="lbl_5_mins">5 mins</string>
  <string name="lbl_name">Name</string>
  <string name="lbl_cup_cake">Cup Cake</string>
  <string name="lbl_register">Register</string>
  <string name="lbl_view_profile">View Profile</string>
  <string name="lbl_add_video">Add Video</string>
  <string name="lbl_login_now">Login Now</string>
  <string name="lbl_05_00">05:00</string>
  <string name="lbl_soup">Soup</string>
  <string name="lbl_drinks">Drinks</string>
  <string name="lbl_recommended2">Recommended </string>
  <string name="msg_blueberry_muffi">Blueberry Muffins</string>
  <string name="lbl_10_03">10:03</string>
  <string name="lbl_reset">Reset</string>
  <string name="lbl_1_serving">1 Serving</string>
  <string name="lbl_dessert">Dessert</string>
  <string name="lbl_serving">Serving</string>
  <string name="lbl_2">2</string>
  <string name="msg_what_would_you">What would you like
to cook today?</string>
  <string name="msg_today_s_fresh_r">Today\u2019s Fresh Recipe</string>
  <string name="lbl_4">4</string>
  <string name="lbl_history">History</string>
  <string name="lbl_denny">Denny</string>
  <string name="lbl_register_now">Register Now</string>
  <string name="lbl_recipe">Recipe</string>
  <string name="lbl_login">Login</string>
  <string name="msg_cook_in_easy_wa">Cook in easy way</string>
  <string name="lbl_welcome_denny">Welcome  Denny</string>
  <string name="lbl_duration">Duration</string>
  <string name="lbl_welcome">Welcome  </string>
  <string name="msg_not_registered">Not Registered Yet?</string>
  <string name="lbl_brunch">Brunch</string>
  <string name="lbl_search_recipe">Search Recipe</string>
  <string name="lbl_recently_viewed">Recently Viewed</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_20_mins">20 mins</string>
  <string name="msg_french_toast_wi">French Toast with Berries</string>
  <string name="lbl_title">Title</string>
  <string name="lbl_280_calories">280 Calories</string>
  <string name="lbl_chicken_burger">Chicken Burger</string>
  <string name="lbl_help">Help</string>
  <string name="lbl_starter">Starter</string>
  <string name="lbl_meal">Meal</string>
  <string name="lbl_appetizer">Appetizer</string>
  <string name="lbl_khana_recipe">KHANA RECIPE</string>
  <string name="lbl_glazed_salmon">Glazed Salmon</string>
  <string name="lbl_20_03">20:03</string>
  <string name="lbl_full_name">Full Name</string>
  <string name="lbl_breakfast">Breakfast</string>
  <string name="lbl_apply">Apply</string>
  <string name="lbl_45_mins">45 mins</string>
</resources>
