<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="recentRowModel" type="com.ikramsapplication.app.modules.recent.data.model.RecentRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearItem"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylebluegray_902cornerRadius">
        <ImageView android:id="@+id/imageRowimage"
            android:layout_height="@dimen/_54pxh"
            android:layout_marginBottom="@dimen/_23pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="@dimen/_66pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_5a1c82c9164b70}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_5a1c82c9164b70"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnbreakfast"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_weight="0.71" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtBreakfast"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{recentRowModel.txtBreakfast}"
                style="@style/txtSegoeUI8" tools:text="@string/lbl_breakfast"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBlueberryMuffi"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{recentRowModel.txtBlueberryMuffi}"
                style="@style/txtSegoeUI15" tools:text="@string/msg_blueberry_muffi"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowrating"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageRating"
                    android:layout_height="@dimen/_10pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_63pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rating"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rating"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCaloriesCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{recentRowModel.txtCaloriesCounter}"
                    style="@style/txtSegoeUI8_1" tools:text="@string/lbl_120_calories"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlocation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLocation"
                    android:layout_height="@dimen/_9pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_9pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_location_gray_602"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_location_gray_602"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{recentRowModel.txtTime}"
                    style="@style/txtSegoeUI8_2" tools:text="@string/lbl_10_mins"/>
                <ImageView android:id="@+id/imageServing"
                    android:layout_height="@dimen/_9pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_serving"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_serving"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtServingCounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{recentRowModel.txtServingCounter}"
                    style="@style/txtSegoeUI8_2" tools:text="@string/lbl_1_serving"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/imageLocationOne"
            android:layout_height="@dimen/_13pxh"
            android:layout_marginBottom="@dimen/_70pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="@dimen/_15pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_location_orange_900"
            tools:ignore="ContentDescription" tools:src="@drawable/img_location_orange_900"/>
    </LinearLayout>
</layout>
