<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.ikramsapplication.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <FrameLayout android:id="@+id/frameLOGIN"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <ImageView android:id="@+id/imageSplash"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_unsplash1spu0k}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_unsplash1spu0k"/>
        <LinearLayout android:id="@+id/linearColumnchefone"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyle">
            <ImageView android:id="@+id/imageChefOne"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_136pxh"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_52pxv"
                android:layout_width="@dimen/_136pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_chef1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_chef1"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtKHANARECIPE"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtKHANARECIPE}"
                style="@style/txtLoraromanbold36" tools:text="@string/lbl_khana_recipe"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCookineasywa"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtCookineasywa}"
                style="@style/txtLoraromansemibold16" tools:text="@string/msg_cook_in_easy_wa"/>
            <TextView android:ellipsize="end" android:id="@+id/txtLogin"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLogin}"
                style="@style/txtLoraromanbold32" tools:text="@string/lbl_login"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvector"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_52pxh"
                android:layout_marginStart="@dimen/_52pxh"
                android:layout_marginTop="@dimen/_62pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVector"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_37pxh"
                    android:layout_weight="0.8"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtEmailAddress}"
                    style="@style/txtLoraromanmedium15" tools:text="@string/lbl_email_address"/>
            </LinearLayout>
            <View android:background="@color/white_A700"
                android:id="@+id/lineLineTwo"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_344pxh"/>
            <LinearLayout android:id="@+id/linearRowvectorOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRowsettings"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.86"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageSettings"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_settings"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPassword"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_37pxh"
                        android:layout_weight="0.76"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{loginVM.loginModel.txtPassword}"
                        style="@style/txtLoraromanmedium17" tools:text="@string/lbl_password"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageVectorOne"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_154pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_23pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_white_a700"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_white_a700"/>
            </LinearLayout>
            <View android:background="@color/white_A700"
                android:id="@+id/lineLineThree"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_344pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtForgotPassword"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtForgotPassword}"
                style="@style/txtLoraromanregular15" tools:text="@string/msg_forgot_password"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowgoogle"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageGoogle"
                    android:layout_height="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_google"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
                <ImageView android:id="@+id/imageFacebook"
                    android:layout_height="@dimen/_27pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_facebook"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_facebook"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLoginOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline" tools:text="@string/lbl_login"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRownotregistered"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_213pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNotRegistered"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.6"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtNotRegistered}"
                    style="@style/txtLoraromanbold16" tools:text="@string/msg_not_registered"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRegisterNow"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{loginVM.loginModel.txtRegisterNow}"
                    style="@style/txtLoraromanbold16_1" tools:text="@string/lbl_register_now"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
